# scorep_substrate_vampir_groups_writer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: environment.hpp  exception.hpp  groups_writer.hpp  log.hpp  scorep.hpp
src/: groups_writer.cpp  scorep.cpp
